added history and new_order_uid to user model
